--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
 <resources>
     <dimen name="splash_logo_width">120dp</dimen>
     <dimen name="splash_logo_height">120dp</dimen>
+
+    <dimen name="font_detail">16sp</dimen>
+    <dimen name="font_title">20sp</dimen>
+
+    <dimen name="margin_big">32dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
 </resources>
