--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -25,13 +25,15 @@
             />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvEventsList"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin_big"
+            android:layout_marginTop="@dimen/margin_medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEventsTitle"
             app:layout_constraintBottom_toBottomOf="parent"
+            tools:listitem="@layout/item_event_list"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
