--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="splash_logo_width">120dp</dimen>
     <dimen name="splash_logo_height">120dp</dimen>
     <dimen name="card_image_height">120dp</dimen>
+    <dimen name="detail_image_height">180dp</dimen>
 
     <dimen name="font_detail">16sp</dimen>
     <dimen name="font_title">20sp</dimen>
