--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,4 +41,19 @@
         <item name="android:textAlignment">textStart</item>
     </style>
 
+
+    <style name="textInputStyle">
+        <item name="colorControlNormal">@android:color/darker_gray</item>
+        <item name="colorControlActivated">@color/color_primary</item>
+        <item name="colorError">@color/error</item>
+    </style>
+
+    <style name="editTextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/font_detail</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:textColorHighlight">?android:attr/colorControlHighlight</item>
+        <item name="android:padding">@dimen/margin_small</item>
+    </style>
+
 </resources>
